--- a/css/style.css
+++ b/css/style.css
@@ -52,12 +52,9 @@ a:hover {
 }
 
 .home-page {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  height: 100vh;
-  background: url("../images/background1.jpg") no-repeat center center;
+  background-image: url("../images/background1.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #petals-container {
@@ -139,9 +136,10 @@ a:hover {
   font-size: 56px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  color: #d00e99;
+  color: #e692e6;
   letter-spacing: 2px;
   position: relative;
+  text-align: center;
 }
 .loader::after {
   content: "Anastasiia Saienko";
@@ -180,6 +178,7 @@ header nav ul {
   justify-content: space-around;
   list-style: none;
 }
+
 header nav ul li a {
   display: flex;
   justify-content: center;
@@ -187,7 +186,7 @@ header nav ul li a {
   font-weight: 700;
   font-size: 16px;
   color: #ffffff;
-  border-radius: 20px;
+  border-radius: 30px;
   width: 143px;
   height: 48px;
   text-decoration: none;
@@ -209,7 +208,7 @@ header nav ul li a.active {
   border: none;
   color: #fff;
   cursor: pointer;
-  background-color: #d00e99;
+  background-color: #e692e6;
 }
 
 .button-hover:active {
@@ -230,15 +229,15 @@ header nav ul li a.active {
 
 .button-hover:hover:before {
   top: -70%;
-  background-image: radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, transparent 20%, #d00e99 20%, transparent 30%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, transparent 10%, #d00e99 15%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%);
+  background-image: radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, transparent 20%, #e692e6 20%, transparent 30%),
+    radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, transparent 10%, #e692e6 15%, transparent 20%),
+    radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, #e692e6 20%, transparent 20%);
   background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%,
     10% 10%, 18% 18%;
   background-position: 50% 120%;
@@ -265,13 +264,13 @@ header nav ul li a.active {
 
 .button-hover:hover::after {
   bottom: -70%;
-  background-image: radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, transparent 10%, #d00e99 15%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%),
-    radial-gradient(circle, #d00e99 20%, transparent 20%);
+  background-image: radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, #e692e6, transparent 20%),
+    radial-gradient(circle, transparent 10%, #e692e6 15%, transparent 20%),
+    radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, #e692e6 20%, transparent 20%),
+    radial-gradient(circle, #e692e6, transparent 20%);
   background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 20% 20%, 18% 18%;
   background-position: 50% 0%;
   animation: greenbottomBubbles 0.6s ease;
@@ -296,28 +295,100 @@ header nav ul li a.active {
 }
 
 .about-page {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  height: 100vh;
-  background: url("../images/background3.jpg") no-repeat center center;
+  background-image: url("../images/background.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .contacts-page {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  height: 100vh;
-  background: url("../images/background3.jpg") no-repeat center center;
+  background-image: url("../images/background.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .education-page {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  height: 100vh;
-  background: url("../images/background3.jpg") no-repeat center center;
+  background-image: url("../images/background.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  margin-top: 74px;
+}
+
+.center h1 {
+  text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  background: linear-gradient(90deg, #fbe2f1 0%, #e692e6 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 60px;
+  font-weight: 700;
+  font-family: "cera_probold";
+  margin-bottom: 30px;
+}
+
+.about {
+  border-radius: 90px;
+  background: #e692e6;
+  background: rgba(230, 146, 230, 0.65);
+  width: 100%;
+  height: auto;
+  margin-bottom: 71px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  padding-left: 100px;
+  padding-right: 100px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  gap: 35px;
+}
+
+.aboutme1 {
+  display: flex;
+  justify-content: space-between;
+  gap: 35px;
+}
+
+.text-about h2 {
+  margin-bottom: 30px;
+  text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  background: linear-gradient(90deg, #fbe2f1 0%, #e692e6 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 54px;
+  font-weight: 700;
+  font-family: "cera_probold";
+}
+
+.text-about p {
+  font-size: 30px;
+  color: #fff;
+  font-family: "cera_proregular";
+}
+
+.image img {
+  border-radius: 25px;
+  height: 619px;
+}
+.image-small img {
+  border-radius: 25px;
+  height: 350px;
+  width: 320px;
+}
+
+.photo2 img {
+  position: relative;
+  left: -111px;
+  bottom: -263px;
+  width: 350px;
+}
+
+.image-small {
+  display: flex;
+  margin-top: 100px;
 }
